--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,18 +1,22 @@
 .header {
-  background: #20222b;
+  background: $off-black;
   color: white;
-  margin-bottom: 4.8rem;
-  padding: 1.6rem 0;
-}
+  margin-bottom: $m-size;
+  padding: $m-size 0;
 
-.header__title {
-  font-size: 3.2rem;
-  margin: 0;
-}
+  &__title {
+    font-size: $l-size;
+    margin: 0;
+  }
 
-.header__subtitle {
-  color: #a5afd7;
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin: 0;
+  &__subtitle {
+    color: $off-white;
+    font-size: $m-size;
+    font-weight: 500;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    margin-bottom: $xl-size;
+  }
 }
