--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,12 @@
+// Base
+@import './base/settings';
 @import './base/base';
+
+// Components
 @import './components/header';
+@import './components/container';
+@import './components/button';
+@import './components/widget';
+@import './components/option';
+@import './components/add-option';
+@import './components/modal';
